--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,21 @@
 }
 
 
+.nav-item {
+  margin: 0 10px;
+}
+
+.nav-item:hover {
+  transform: translateY(-2px);
+  transition: transform 0.3s ease;
+  background-color: #E0E0E0;
+  border-radius: 5px;
+}
+
+
+
+
+
 
 html {
   scroll-behavior: smooth;
