--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@
 
 .nav-item {
   margin: 0 10px;
+  padding: 10px 15px;
+  font-size: 16px;
+  color: #555;
+  text-decoration: none;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  display: inline-block;
+  border-radius: 5px;
+  
+
 }
 
 .nav-item:hover {
