--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@
 }
 
 
+.navbar-brand h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #555;  
+}
+
 .nav-item {
   margin: 0 10px;
   padding: 10px 15px;
