--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ h2 {
   font-size: 24px;
   font-weight: bolder;
   color:#535353;
+  text-align: center;
  
 }
 
@@ -191,13 +192,23 @@ h2 {
   font-size: 20px;
   color:#666768;
   font-weight: 500;
+  text-align: center;
  
 }
 
 .list-unstyled li{
   color:#666768;
-  padding-left: 35%;
+  margin-left: 20%;
 }
+
+.list-unstyled .btn{
+ margin-top: 10px;
+}
+
+.mb-2 .btn{
+  margin-left: 15%;
+}
+
 
 .col-lg-4 {
   margin-left: 5%;
