--- a/css/style.css
+++ b/css/style.css
@@ -182,10 +182,18 @@
   color: #555;  
 }
 
+.dropdown-item {
+  font-size: 18px;
+  color: #555;
+  font-weight: bolder;
+  padding: 10px 25px;
+  text-align: center;
+}
+
 .nav-item {
   margin: 0 10px;
-  padding: 10px 15px;
-  font-size: 18px;
+  padding: 10px 25px;
+  font-size: 20px;
   color: #555;
   text-decoration: none;
   transition: transform 0.3s ease, background-color 0.3s ease;
@@ -204,6 +212,12 @@
   border-radius: 5px;
 }
 
+.nav-link {
+  color: #555 !important;
+  font-weight: bolder;
+  padding-top: 20px;
+  
+}
 
 
 
