--- a/css/style.css
+++ b/css/style.css
@@ -454,14 +454,14 @@ h5 {
   letter-spacing: 1px;
 }
 
-.products-sect{
+/* .products-sect{
   position: relative;
-}
+} */
 
 /* ===== SEE MORE 圓形按鈕（不用 icon font）===== */
-.products-sect .btn.more{
+/* .products-sect .btn.more{
   position:absolute;
-  top: 52px;
+  top: 50px;
   left: calc(50% + 140px);
   width: 50px;
   height: 50px;
@@ -473,8 +473,8 @@ h5 {
   align-items:center;
   justify-content:center;
   transition: transform .25s ease, background .25s ease;
-}
-
+} */
+/* 
 .products-sect .btn.more i{
   width: 0;
   height: 0;
@@ -491,7 +491,7 @@ h5 {
 }
 .products-sect .btn.more:hover i{
   border-left-color:#fff;
-}
+} */
 
 /* ===== 列表：用 grid 比 float 穩 ===== */
 .products-list{
